--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.0.5
   curved_navigation_bar: ^1.0.3
+  sqflite: ^2.3.0
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
