--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   sqflite: ^2.3.0
   path_provider: ^2.1.0
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
